<resources>
    <string name="app_name">NTC</string>
    <string name="progression_bar">0.50          0.75           1         1.25            1.50</string>
    <string name="START_LOG">START LOG</string>
    <string name="STOP_LOG">STOP LOG</string>
    <string name="START_MONITORING">START MONITORING</string>
    <string name="STOP_MONITORING">STOP MONITORING</string>
    <string name="ADD_DEVICE">ADD DEVICE</string>
    <string name="image1">image</string>


    <string name="DISCOVERY_STARTED">Discoverying device started! Wait 12 seconds and then touch device name to add it to the recognized ones</string>
    <string name="DISCOVERING_DEVICES">Discovering devices...</string>
    <string name="RECOGNIZED_DEVICES">Recognized devices! Touch to unmatch device</string>
    <string name="MATCHED_DEVICES">Already Matched Devices</string>
    <string name="image2">image</string>
    <string name="image3">image</string>

    <string name="START_CALIBRATION">START CALIBRATION</string>
    <string name="NO_DEVICE_SELECTED">No device has been selected yet.</string>
    <string name="START_CALIBRATION_INSTRUCTIONS">INSTRUCTIONS: \nWait for bluetooth discovery, then select a device and place the devices at 1 meter distance and click on the below button to start the calibration.</string>
    <string name="WAIT_FOR_CALIBRATION">Wait a minute for the calibration completition...</string>
    <string name="DISCOVERED_DEVICES_HEADER">Discovered devices:</string>
    <string name="INDOOR_RADIO_BUTTON">INDOOR</string>
    <string name="OUTDOOR_RADIO_BUTTON">OUTDOOR</string>
    <string name="NONE">None</string>
    <string name="SELECTED_DEVICE">Selected device:</string>

</resources>