<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/progression_bar"
                android:textAlignment="center"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@+id/prograssionBar"
                app:layout_constraintEnd_toStartOf="@+id/rssilogger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/monitoringButton"
                android:layout_width="237dp"
                android:layout_height="103dp"
                android:layout_marginTop="8dp"
                android:onClick="startMonitoring"
                android:text="@string/START_MONITORING"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <Button
                android:id="@+id/button"
                android:layout_width="237dp"
                android:layout_height="103dp"
                android:onClick="startBLTScan"
                android:text="@string/ADD_DEVICE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/monitoringButton" />

            <Button
                android:id="@+id/button2"
                android:layout_width="237dp"
                android:layout_height="103dp"
                android:onClick="startCalibrationActivity"
                android:text="CALIBRATION"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="225dp"
                android:layout_height="249dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/image1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prograssionBar"
                app:srcCompat="@drawable/distance" />

            <Button
                android:id="@+id/rssilogger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startRSSILogging"
                android:text="@string/START_LOG"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.949"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036" />

            <SeekBar
                android:id="@+id/prograssionBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:max="4"
                android:progress="0"
                app:layout_constraintEnd_toStartOf="@+id/rssilogger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/in_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IN/OUT"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.918"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.111" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>